# Libraries

./: .gitattributes  README.md
bench_libs/: CMakeLists.txt
bench_libs/inc/: core_portme.h  coremark.h
bench_libs/src/: core_portme.c
cb_libs/: CMakeLists.txt  README.md
cb_libs/inc/: Disjoint_LinUCB.hpp  Hybrid_LinUCB.hpp  fixed_point.hpp  info.hpp  matrix (copy).hpp  matrix.hpp  offline_script.hpp  offline_script_hybrid.hpp  params.hpp  params_hybrid.hpp  values.hpp  values_h.hpp
cb_libs/src/: Disjoint_LinUCB.cpp  Hybrid_LinUCB.cpp  offline_script.cpp  offline_script_hybrid.cpp  values.cpp  values_h.cpp
dsp_libs/: CMakeLists.txt
dsp_libs/inc/: dsp_functions.h
dsp_libs/src/: convolution.c  kvcu_complete.c
general_libs/: CMakeLists.txt
general_libs/inc/: functions.h  klessydra_defs.h  macros.h
general_libs/src/: Klessydra_ctx_switch.c  Klessydra_get_backup_coreID.c  Klessydra_get_coreID.c  Klessydra_get_mhartid.c  klessydra_lock_set.c  performance_counters.c  send_multi_sw_irq.c  send_sw_irq.c  sync_barrier.c  sync_barrier2.c
vgg16_libs/: CMakeLists.txt
vgg16_libs/inc/: Definitions_fully_test.h  esempio.sh
vgg16_libs/src/: convolution2D.c  convolution2D_SPM.c  convolution2D_SPM_02_04.c  convolution2D_SPM_05_04.c  convolution2D_SPM_28_04.c  convolution2D_SPM_SCAL.c  dbg_functs.c  displayResult.c  esempio.sh  external_input.c  external_off.c  fullyconnect.c  getBias.c  getWeights.c  input.c  nohup.out  relu.c  softmax.c
vgg16_libs/src/duts/: dut_matrix_L0_0.c  dut_matrix_L0_1.c  dut_matrix_L0_2.c  dut_matrix_L100_1.c  dut_matrix_L10_0.c  dut_matrix_L10_1.c  dut_matrix_L10_2.c  dut_matrix_L10_3.c  dut_matrix_L10_4.c  dut_matrix_L11_0.c  dut_matrix_L11_1.c  dut_matrix_L11_2.c  dut_matrix_L11_3.c  dut_matrix_L11_4.c  dut_matrix_L12_0.c  dut_matrix_L12_1.c  dut_matrix_L12_10.c  dut_matrix_L12_11.c  dut_matrix_L12_12.c  dut_matrix_L12_13.c  dut_matrix_L12_14.c  dut_matrix_L12_15.c  dut_matrix_L12_16.c  dut_matrix_L12_17.c  dut_matrix_L12_18.c  dut_matrix_L12_19.c  dut_matrix_L12_2.c  dut_matrix_L12_20.c  dut_matrix_L12_21.c  dut_matrix_L12_22.c  dut_matrix_L12_23.c  dut_matrix_L12_24.c  dut_matrix_L12_25.c  dut_matrix_L12_26.c  dut_matrix_L12_27.c  dut_matrix_L12_28.c  dut_matrix_L12_29.c  dut_matrix_L12_3.c  dut_matrix_L12_30.c  dut_matrix_L12_31.c  (+195 more)
vgg16_libs/src/lay/: BASE_AC_EXT.c  BASE_B_EXT.c  layer0_bias.c  layer11_bias.c  layer12_bias.c  layer13_bias.c  layer15_bias.c  layer16_bias.c  layer17_bias.c  layer19_bias.c  layer1_bias.c  layer1_filters.c  layer20_bias.c  layer20_filters.c  layer21_bias.c  layer21_filters.c  layer2_bias.c  layer2_filters.c  layer4_bias.c  layer4_filters.c  layer5_bias.c  layer5_filters.c  layer7_bias.c  layer7_filters.c  layer8_bias.c  layer9_bias.c
vgg16_libs/src/x_abba/: addBias.c  classifica.c  convolution2D.c  convolution2D_SPM_25_04.c  convolution2D_SPM_NOscal.c  convolution2D_SPM_meno_muls.c  cumulativeSum.c  getBias.c  getFeatures.c  matrixReset.c  maxpool.c  relu.c  scan.c  set_coord.c  to_fixed.c  z_airplane.c  z_frog.c
